/**
 * Copyright 2013 Signal Messenger, LLC
 * SPDX-License-Identifier: AGPL-3.0-only
 */
syntax = "proto2";

package org.erwinkok.signal;

option java_package = "org.erwinkok.signal.server.messages";
option java_outer_classname = "MessageProtos";

message Message {
  enum Type {
    reserved 2, 7;

    UNKNOWN = 0;
    CIPHERTEXT = 1;
    PREKEY_BUNDLE = 3;
    SERVER_DELIVERY_RECEIPT = 5;
    UNIDENTIFIED_SENDER = 6;
    PLAINTEXT_CONTENT = 8;  // for decryption error receipts
  }

  optional Type type = 1;
  optional string source_service_id = 11;
  optional uint32 source_device = 7;
  optional uint64 client_timestamp = 5;
  optional bytes content = 8; // Contains an encrypted Content
  optional string server_guid = 9;
  optional uint64 server_timestamp = 10;
  optional bool ephemeral = 12; // indicates that the message should not be persisted if the recipient is offline
  optional string destination_service_id = 13;
  optional bool urgent = 14 [default=true];
  optional string updated_pni = 15;
  optional bool story = 16; // indicates that the content is a story.
  // next: 19
}
